# Android-Secure-Calculator

./: .gitignore  16kb-page-size-fix-summary.md  LICENSE  OBFUSCATION_SUMMARY.md  OBFUSCATION_TECHNIQUES.md  Performance_Testing_Framework_Table.md  README.md  WARP.md  apk-manager-fixed.ps1  apk-manager-test.ps1  apk-manager.ps1  apply-protection.ps1  avd-test-guide.ps1  build-clean-apk-fixed.ps1  build-clean-apk.ps1  build-obfuscated.ps1  build-protected-apk-fixed.ps1  build-protected-apk.ps1  build-release.ps1  build-test-apk.ps1  gradle.properties  gradlew  mapping-files-guide.md  protection-manager.ps1  remove-protection.ps1  settings.gradle.kts  show-obfuscation-demo.ps1  test-protected-apk.ps1
anti-debug-sdk/: README.md  build.gradle
anti-debug-sdk/src/main/cpp/: CMakeLists.txt  native-lib.cpp  native-obfuscator.cpp
anti-debug-sdk/src/main/java/com/example/antidebug/: AntiDebug.kt  BehavioralDetection.kt  DataProtection.kt  DebuggerDetection.kt  EmulatorDetection.kt  HookDetection.kt  NativeObfuscator.kt  ResponseHandler.kt  RootDetection.kt  TamperDetection.kt
app/: build.gradle.kts  obfuscation-dictionary.txt  proguard-comprehensive.pro  proguard-production.pro  proguard-rules.pro  seeds.txt  usage.txt
app/src/androidTest/java/com/android/calculator/: ExampleInstrumentedTest.kt  MainActivityTests.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/: secure_config.json  secure_config.json.enc
app/src/main/java/com/android/calculator/: AndroidCalculatorApp.kt  MyPreferences.kt  TextSizeAdjuster.kt  Themes.kt
app/src/main/java/com/android/calculator/activities/: AboutActivity.kt  MainActivity.kt  SettingsActivity.kt
app/src/main/java/com/android/calculator/calculator/: Calculator.kt
app/src/main/java/com/android/calculator/calculator/parser/: Expression.kt  NumberFormatter.kt  NumberingSystem.kt
app/src/main/java/com/android/calculator/history/: History.kt  HistoryAdapter.kt
app/src/main/java/com/android/calculator/obfuscation/: ObfuscationManager.kt  README.md
app/src/main/java/com/android/calculator/obfuscation/data/: DataMasking.kt
app/src/main/java/com/android/calculator/obfuscation/demo/: EncryptedClassLoader.kt  ObfuscationDemo.kt  SecureUtility.kt
app/src/main/java/com/android/calculator/obfuscation/native/: NativeObfuscator.kt
app/src/main/java/com/android/calculator/obfuscation/runtime/: ReflectionIndirection.kt
app/src/main/java/com/android/calculator/obfuscation/static/: AdvancedObfuscator.kt  ControlFlowObfuscator.kt  FlowObfuscator.kt  ResourceObfuscator.kt  StringCrypto.kt  StringObfuscator.kt
app/src/main/java/com/android/calculator/security/: CertificateInfo.kt
app/src/main/java/com/android/calculator/services/: MyTileService.kt
app/src/main/java/com/android/calculator/util/: AdvancedObfuscator.kt  ControlFlowObfuscator.kt  DataMasking.kt  FlowObfuscator.kt  MyPreferenceMigrator.kt  NativeObfuscator.kt  ReflectionIndirection.kt  ResourceObfuscator.kt  ScientificMode.kt  ScientificModeTypes.kt  SelectiveTestingConfig.kt  StringCrypto.kt  StringObfuscator.kt
app/src/main/res/drawable/: circle.xml
app/src/main/res/drawable-night/: ic_baseline_more_vert_24.xml
app/src/main/res/layout/: activity_about.xml  activity_main.xml  settings_activity.xml
app/src/main/res/layout-land/: activity_main.xml
app/src/main/res/layout-sw720dp-land/: activity_main.xml
app/src/main/res/values/: attrs.xml  colors.xml  strings.xml  styles.xml
app/src/main/res/values-night/: colors.xml  styles.xml
app/src/main/res/xml/: root_preferences.xml
app/src/test/java/com/android/calculator/: ExpressionUnitTest.kt  NumberFormatterTest.kt
app/src/test/java/com/android/calculator/obfuscation/: ObfuscationIntegrationTest.kt
docs/: Anti_Debug_Techniques_Documentation.md  Obfuscation_Techniques_Documentation.md  verify-obfuscation.ps1
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
raspmodule/: README.md  build.gradle
raspmodule/src/main/cpp/: CMakeLists.txt  native-lib.cpp  native-obfuscator.cpp
raspmodule/src/main/java/com/example/antidebug/: AntiDebug.kt  BehavioralDetection.kt  DataProtection.kt  DebuggerDetection.kt  EmulatorDetection.kt  HookDetection.kt  NativeObfuscator.kt  ResponseHandler.kt  RootDetection.kt  TamperDetection.kt
releases/: seeds-20250909-033913.txt  seeds-20251014-121537.txt  usage-20250909-033913.txt  usage-20251014-121537.txt
